--- a/style.css
+++ b/style.css
@@ -33,9 +33,9 @@ html {}
 /* === Body === */
 
 body {
-	background-color: #eeeeee;
-	color: #999;
-	font-family: Roboto, serif;
+	background-color: #f5f5f5;
+	color: #555;
+	font-family: "Cantarell", sans-serif;
 	font-size: 18px;
 	font-weight: 400;
 	line-height: 1.625;
@@ -88,8 +88,7 @@ h3,
 h4,
 h5,
 h6 {
-	color: #999;
-	font-family: Roboto, cursive;
+	color: #555;
 	font-weight: 300;
 	line-height: 1.2;
 	margin: 0 0 20px;
@@ -578,7 +577,7 @@ img.size-full {}
 #header {
 	background-color: rgba(0,0,0,0.8);;
 	text-align: left;
-	padding: 30px 0;
+	padding: 10px 0;
 }
 
 	#branding {
@@ -678,13 +677,19 @@ img.size-full {}
 /* ====== Primary Menu ====== */
 
 #menu-primary {
-	background-color: #333333;
 	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	width: 65%;
+	float: right;
+	text-align: right;
 }
 
 	#menu-primary .wrap {}
 
-		#menu-primary ul {}
+		#menu-primary ul {
+			text-align: right;
+		}
 
 			#menu-primary .sub-menu {
 				background-color: #333333;
@@ -703,37 +708,35 @@ img.size-full {}
 				#menu-primary li a:hover,
 				#menu-primary li:hover > a {}
 
-/* ====== Secondary Menu ====== */
+/* ====== Subsidiary Menu ====== */
 
-#menu-secondary {
+#menu-subsudiary {
 	background-color: transparent;
 	width: 65%;
 	float: right;
 	text-align: right;
+	text-transform: uppercase;
+	letter-spacing: 1px;
 }
 
-	#menu-secondary .wrap {}
+	#menu-subsudiary .wrap {}
 
-		#menu-secondary ul {
+		#menu-subsudiary ul {
 			text-align: right;
 		}
 
-			#menu-secondary ul ul {}
+			#menu-subsudiary ul ul {}
 
-			#menu-secondary li {}
-			#menu-secondary li.current-menu-item {}
+			#menu-subsudiary li {}
+			#menu-subsudiary li.current-menu-item {}
 
-				#menu-secondary li a {
-					color: #999;
+				#menu-subsudiary li a {
+					color: #ffffff;
 				}
-				#menu-secondary li a:hover,
-				#menu-secondary li:hover > a {
+				#menu-subsudiary li a:hover,
+				#menu-subsudiary li:hover > a {
 
 				}
-
-/* ====== Subsidiary Menu ====== */
-
-
 
 /**
  * Content
