--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ html {}
 
 body {
 	background-color: #f5f5f5;
-	color: #555;
+	color: #333;
 	font-family: "Cantarell", sans-serif;
 	font-size: 18px;
 	font-weight: 400;
@@ -72,13 +72,16 @@ textarea:focus,
 /* === Links === */
 
 a {
-	color: #fa9581;
+	color: #0087ed;
+	font-weight: 500;
 	text-decoration: none;
 }
 
-	a:hover {
-		color: #333;
+	a:hover,
+	a:focus {
+
 	}
+
 
 /* === Headers === */
 
@@ -573,11 +576,16 @@ img.size-full {}
 /**
  * Header
  * --------------------------------------------------------------------------- */
+.header-image-container {
+	height: 180px;
+	background: darkblue;
+	box-shadow: inset 0 -1px 10px rgba(0,0,0,0.4);
+}
 
 #header {
 	background-color: rgba(0,0,0,0.8);;
 	text-align: left;
-	padding: 10px 0;
+	padding: 0;
 }
 
 	#branding {
@@ -758,9 +766,10 @@ img.size-full {}
 /* ====== POSTS ====== */
 
 .entry  {
-	padding: 40px;
+	padding: 40px 0;
 	margin-bottom: 60px;
-	background-color: #fff;
+	background-color: transparent;
+	border-bottom: 1px solid #e5e5e5;
 }
 	.page .entry,
 	.single .entry {
@@ -866,6 +875,34 @@ img.size-full {}
 	/* === Post content and excerpts === */
 
 	.entry-content {}
+
+		.entry-content a {
+			position: relative;
+		}
+
+		.entry-content a::after {
+			order-radius: 3px;
+			position: absolute;
+			top: 85%;
+			left: 0px;
+			width: 100%;
+			height: 0.1rem;
+			background: #0087ed;
+			content: "";
+			opacity: 0;
+			transition: opacity 0.3s ease 0s, transform 0.3s ease 0s;
+			transform: translateY(10px);
+		}
+		.entry-content a:hover,
+		.entry-content a:focus {
+
+		}
+
+		.entry-content a:hover::after,
+		.entry-content a:focus::after {
+			opacity: 0.7;
+			transform: translateY(5px);
+		}
 
 		.entry-content ol,
 		.entry-content ul {
