--- a/style.css
+++ b/style.css
@@ -746,7 +746,6 @@ img.size-full {}
 				}
 
 				.menu li a {
-					padding: 22px 16px;
 					font-weight: bold;
 					display: block;
 				}
@@ -816,38 +815,64 @@ img.size-full {}
 
 				#menu-primary li a {
 					color: #fff;
+					padding: 22px 16px;
 				}
 				#menu-primary li a:hover,
 				#menu-primary li:hover > a {}
 
 /* ====== Subsidiary Menu ====== */
 
-#menu-subsudiary {
+.menu-subsidiary {
 	background-color: transparent;
-	width: 65%;
-	float: right;
-	text-align: right;
-	text-transform: uppercase;
-	letter-spacing: 1px;
 }
 
-	#menu-subsudiary .wrap {}
+	.menu-subsidiary .wrap {}
 
-		#menu-subsudiary ul {
-			text-align: right;
+		.menu-subsidiary ul {
 		}
 
-			#menu-subsudiary ul ul {}
+			.menu-subsidiary ul ul {}
 
-			#menu-subsudiary li {}
-			#menu-subsudiary li.current-menu-item {}
+			.menu-subsidiary li {
 
-				#menu-subsudiary li a {
-					color: #ffffff;
+			}
+			.menu-subsidiary li.current-menu-item {}
+
+				.menu-subsidiary li a {
+					color: #787878;
+					padding: 0;
 				}
-				#menu-subsudiary li a:hover,
-				#menu-subsudiary li:hover > a {
 
+				.menu-subsidiary li a::before {
+					display: inline-block;
+					font: normal 22px/1 'ubuntu-gnome';
+					vertical-align: top;
+					-webkit-font-smoothing: antialiased;
+					background-color: #787878;
+					color: #f2f2f2;
+					border-radius: 50%;
+					padding: 10px;
+				}
+
+				.menu-subsidiary li a::before {
+					content: '\e00a';
+				}
+
+				.menu-subsidiary li a[href*="facebook"]::before {
+					content: '\e002';
+				}
+
+				.menu-subsidiary li a[href*="plus.google"]::before {
+					content: '\e000';
+				}
+
+				.menu-subsidiary li a[href*="twitter"]::before {
+					content: '\e00c';
+				}
+
+				.menu-subsidiary li a:hover,
+				.menu-subsidiary li:hover > a {
+					opacity: 0.8;
 				}
 
 /**
@@ -921,7 +946,7 @@ img.size-full {}
 			.entry-terms {
 			}
 
-			.entry-terms::before,
+			.entry-terms.category::before,
 			.entry-published::before,
 			.entry-author::before,
 			.comments-link::before,
@@ -929,27 +954,23 @@ img.size-full {}
 			.entry-permalink::before,
 			.post-format-link::before {
 				display: inline-block;
-				font: normal 18px/1 'dashicons';
-				margin-right: 5px;
-				margin-top: 5px;
+				font: normal 22px/1 'ubuntu-gnome';
+				margin-right: 3px;
+				margin-top: 4px;
 				vertical-align: top;
 				-webkit-font-smoothing: antialiased;
 				color: #b2b2b2;
 			}
 
 			.entry-terms.category::before {
-				content: "\f318";
-			}
-
-			.entry-terms.post_tag::before {
-				content: "\f323";
+				content: "\e010";
 			}
 
 			.entry-published::before {
-				content: "\f508";
+				content: "\e012";
 			}
 			.entry-author::before {
-				content: "\f338";
+				content: "\e004";
 			}
 
 			.entry-permalink::before {
@@ -957,23 +978,11 @@ img.size-full {}
 			}
 
 			.comments-link::before {
-				content: "\f101";
+				content: "\e001";
 			}
 
 			.post-edit-link::before {
 				content: "\f464";
-			}
-
-			.post-format-link[href$=quote]::before {
-				content: "\f122";
-			}
-
-			post-format-link[href$=image]::before {
-				content: "\f128";
-			}
-
-			post-format-link[href$=audio]::before {
-				content: "\f127";
 			}
 
 			.entry-published,
@@ -982,7 +991,7 @@ img.size-full {}
 			.entry-permalink,
 			.post-format-link,
 			.entry-terms {
-				margin-right: 15px;
+				margin-right: 18px;
 				color: #b2b2b2;
 			}
 
