--- a/style.css
+++ b/style.css
@@ -454,25 +454,44 @@ form {}
 	input[type="reset"],
 	input[type="submit"],
 	.button {
-		background-color: #333333;
+		background-color: #0087ed;
 		border: 0;
+		border-radius: 5px;
 		color: #fff;
 		cursor: pointer;
 		font-size: 16px;
 		font-weight: 400;
-		letter-spacing: 1px;
+		letter-spacing: 0.5px;
 		padding: 16px 24px;
 		text-transform: uppercase;
 		width: auto;
+	  box-shadow: inset 0 -3px 0 0 #0071c6;
+	  position:relative;
+	  display: inline-block;
 	}
 
 	button:hover,
 	input:hover[type="button"],
 	input:hover[type="reset"],
 	input:hover[type="submit"],
-	.button:hover {
-		background-color: #fa9581;
+	.button:hover,
+	button:focus,
+	input:focus[type="button"],
+	input:focus[type="reset"],
+	input:focus[type="submit"],
+	.button:focus {
+		background-color: #3dabff;
 		color: #fff;
+	}
+
+	button:active,
+	input:active[type="button"],
+	input:active[type="reset"],
+	input:active[type="submit"],
+	.button:active {
+		box-shadow: inset 0 -1px 0 0 rgba(0,0,0,0.1);
+	  margin-top: 0;
+	  top: 2px;
 	}
 
 /* === Alignement (WP classes) === */
@@ -1348,6 +1367,10 @@ img.size-full {}
 	#footer .footer-2 {
 		width: 16.65%;
 	}
+		#footer .footer-2 .icon {
+			font-size: 28px;
+			margin-right: 5px;
+		}
 
 	#footer .footer-3 {
 		width: 34.375%;
