--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
  * Author:      Gaurav Pareek
  * Author URI:  https://grv.rocks
  * Tags:        one-column, custom-background, custom-header, custom-menu, featured-images, left-sidebar, post-formats, responsive-layout, right-sidebar, rtl-language-support, threaded-comments, translation-ready
- * Text Domain: magik
+ * Text Domain: ubuntugnome
  * License:     GNU General Public License v2.0 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  */
