--- a/style.css
+++ b/style.css
@@ -615,12 +615,13 @@ form {}
 		color: #fff;
 		cursor: pointer;
 		font-size: 16px;
-		font-weight: 400;
+		font-weight: bold;
 		letter-spacing: 0.5px;
 		padding: 16px 24px;
 		text-transform: uppercase;
 		width: auto;
 	  box-shadow: inset 0 -3px 0 0 #0071c6;
+    text-shadow: 0 1px 0 rgba(0,0,0,0.2);
 	  position:relative;
 	  display: inline-block;
 	}
