--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ html {}
 body {
 	background-color: #f5f5f5;
 	color: #333;
-	font-family: "Cantarell", sans-serif;
+	font-family: "Open Sans", sans-serif;
 	font-size: 18px;
 	font-weight: 400;
 	line-height: 1.625;
@@ -875,7 +875,7 @@ img.size-full {}
 #header {
 	background-color: rgba(0,0,0,0.8);;
 	text-align: left;
-	padding: 0;
+	padding: 6px 0;
 }
 
 	#branding {
@@ -888,7 +888,7 @@ img.size-full {}
 			font-size: 32px;
 			line-height: 1.2;
 			margin-bottom: 0;
-      padding: 11px 0;
+      padding: 12px 0;
 		}
 
 			#site-title a {}
