--- a/style.css
+++ b/style.css
@@ -615,13 +615,13 @@ form {}
 		color: #fff;
 		cursor: pointer;
 		font-size: 16px;
-		font-weight: bold;
+		font-weight: 800;
 		letter-spacing: 0.5px;
 		padding: 16px 24px;
 		text-transform: uppercase;
 		width: auto;
 	  box-shadow: inset 0 -3px 0 0 #0071c6;
-    text-shadow: 0 1px 0 rgba(0,0,0,0.2);
+    text-shadow: 0 1px 0 rgba(0,0,0,0.3);
 	  position:relative;
 	  display: inline-block;
 	}
@@ -846,6 +846,34 @@ img.size-full {}
 		#main {
 			padding: 60px 0 0;
 		}
+
+      #main a {
+        position: relative;
+      }
+
+      #main a::after {
+        order-radius: 3px;
+        position: absolute;
+        top: 85%;
+        left: 0px;
+        width: 100%;
+        height: 0.1rem;
+        background: #0087ed;
+        content: "";
+        opacity: 0;
+        transition: opacity 0.3s ease 0s, transform 0.3s ease 0s;
+        transform: translateY(10px);
+      }
+      #main a:hover,
+      #main a:focus {
+
+      }
+
+      #main a:hover::after,
+      #main a:focus::after {
+        opacity: 0.7;
+        transform: translateY(5px);
+      }
 
 			.layout-1c .content {
 				width: 100%;
@@ -1189,34 +1217,6 @@ img.size-full {}
 	/* === Post content and excerpts === */
 
 	.entry-content {}
-
-		.entry-content a {
-			position: relative;
-		}
-
-		.entry-content a::after {
-			order-radius: 3px;
-			position: absolute;
-			top: 85%;
-			left: 0px;
-			width: 100%;
-			height: 0.1rem;
-			background: #0087ed;
-			content: "";
-			opacity: 0;
-			transition: opacity 0.3s ease 0s, transform 0.3s ease 0s;
-			transform: translateY(10px);
-		}
-		.entry-content a:hover,
-		.entry-content a:focus {
-
-		}
-
-		.entry-content a:hover::after,
-		.entry-content a:focus::after {
-			opacity: 0.7;
-			transform: translateY(5px);
-		}
 
 		.entry-content ol,
 		.entry-content ul {
