--- a/style.css
+++ b/style.css
@@ -851,7 +851,7 @@ img.size-full {}
         position: relative;
       }
 
-      #main a::after {
+      #main a::not(.button)::after {
         order-radius: 3px;
         position: absolute;
         top: 85%;
@@ -869,8 +869,8 @@ img.size-full {}
 
       }
 
-      #main a:hover::after,
-      #main a:focus::after {
+      #main a::not(.button):hover::after,
+      #main a::not(.button):focus::after {
         opacity: 0.7;
         transform: translateY(5px);
       }
@@ -1541,9 +1541,8 @@ img.size-full {}
 	#footer .footer-2 {
 		width: 16.65%;
 	}
-		#footer .footer-2 .icon {
-			font-size: 28px;
-			margin-right: 5px;
+		#footer .footer-2 .icons {
+			margin-top: 10px;
 		}
 
 	#footer .footer-3 {
