--- a/style.css
+++ b/style.css
@@ -1054,14 +1054,15 @@ img.size-full {}
 				.menu-subsidiary li a {
 					color: #787878;
 					padding: 0;
+          margin-right: 10px;
 				}
 
 				.menu-subsidiary li a::before {
 					display: inline-block;
-					font: normal 22px/1 "Genericons";;
+					font: normal 22px/1 "Genericons";
 					vertical-align: top;
 					-webkit-font-smoothing: antialiased;
-					background-color: #787878;
+					background-color: rgba(0,0,0,0.5);
 					color: #f2f2f2;
 					border-radius: 50%;
 					padding: 10px;
@@ -1546,11 +1547,11 @@ img.size-full {}
 		}
 
 	#footer .footer-3 {
-		width: 34.375%;
+		width: 35.375%;
 	}
 
 	#footer .footer-4 {
-		width: 27.05%;
+		width: 26.05%;
 	}
 
 	#footer .copyright {}
