--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ body {
 	background-color: #f5f5f5;
 	color: #333;
 	font-family: "Open Sans", sans-serif;
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.625;
 	margin: 0;
@@ -1117,6 +1117,7 @@ img.size-full {}
 	.singular .entry {
 		margin-bottom: 30px;
     border-bottom: none;
+    border-bottom: none;
 	}
 
 .sticky {
@@ -1374,6 +1375,12 @@ img.size-full {}
 	.loop-nav a[rel="next"] {}
 
 /* === Archive-type pages === */
+
+.archive-header {
+  text-align: center;
+  padding: 0 0 40px;
+  border-bottom: 1px solid #e5e5e5;
+}
 
 .pagination {
 	text-align: center;
