--- a/style.css
+++ b/style.css
@@ -1077,6 +1077,7 @@ img.size-full {}
 	.menu-social .wrap {}
 
 		.menu-social ul {
+			text-align: right;
 		}
 
 			.menu-social ul ul {}
@@ -1089,7 +1090,7 @@ img.size-full {}
 				.menu-social li a {
 					color: #787878;
 					padding: 0;
-		  margin-right: 10px;
+					margin-right: 10px;
 				}
 
 				.menu-social li a::before {
