footer menu tweaks

--- a/style.css
+++ b/style.css
@@ -1059,13 +1059,14 @@ img.size-full {}
 					font-size: 14px;
 					font-weight: normal
 				}
-				#menu-footer li::not(:last-child)::after {
-					content: '\8226';
+				#menu-footer li:not(:last-child)::after {
+					content: '/';
 					padding: 0 2px;
 					color: #787878;
 				}
 				#menu-footer li a:hover {
 					border-bottom: 1px solid rgba(0,0,0,0.5);
+					text-decoration: none;
 				}
 
 /* ====== Social Menu ====== */
