--- a/style.css
+++ b/style.css
@@ -1055,10 +1055,12 @@ img.size-full {}
 
 				#menu-footer li a {
 					color: #787878;
-					padding: 0 5px 0 0;
+					margin: 0 5px 0 0;
+					padding: 0;
 					font-size: 14px;
 					font-weight: normal;
 					display: inline;
+					border-bottom: 1px solid rgba(0,0,0,0.1);
 				}
 				#menu-footer li:not(:last-child)::after {
 					content: '/';
