--- a/style.css
+++ b/style.css
@@ -907,7 +907,7 @@ img.size-full {}
 #header {
 	background-color: rgba(0,0,0,0.8);;
 	text-align: left;
-	padding: 6px 0;
+	padding: 6px 20px;
 }
 
 	#branding {
@@ -1559,7 +1559,7 @@ img.size-full {}
 #footer {
 	background-color: #f2f2f2;
 	font-size: 16px;
-	padding: 40px 0;
+	padding: 40px 20px;
 	box-shadow: inset 0 1px 0 1px #d9d9d9;
 	color: #787878;
 }
