--- a/style.css
+++ b/style.css
@@ -790,6 +790,8 @@ img.size-full {}
 .footer-widgets,
 #footer {
 	display: block;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 #container::before,
@@ -833,6 +835,9 @@ img.size-full {}
 	.wrap {
 		max-width: 980px;
 		margin: 0 auto;
+		padding: 0 20px;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
 	}
 
 		#header,
@@ -945,6 +950,9 @@ img.size-full {}
 .menu {
 	font-size: 14px;
 }
+	.menu .wrap {
+		padding: 0;
+	}
 	.menu ul {
 		list-style: none;
 		padding: 0;
@@ -1559,7 +1567,7 @@ img.size-full {}
 #footer {
 	background-color: #f2f2f2;
 	font-size: 16px;
-	padding: 40px 20px;
+	padding: 40px 0;
 	box-shadow: inset 0 1px 0 1px #d9d9d9;
 	color: #787878;
 }
