tweaked margins and paddings for entries on blog page.

--- a/style.css
+++ b/style.css
@@ -1171,6 +1171,14 @@ img.size-full {}
 	border-bottom: none;
 	}
 
+	.plural .entry::first-of-type {
+		margin-top: 20px;
+	}
+	.plural .entry::last-of-type {
+		margin-bottom: 0;
+		border-bottom: none;
+	}
+
 .sticky {
 	background: #fafafa;
 	box-shadow: inset 0 0 0 2px rgba(0,0,0,0.3);
