--- a/style.css
+++ b/style.css
@@ -861,7 +861,7 @@ img.size-full {}
 		top: 85%;
 		left: 0px;
 		width: 100%;
-		height: 0.07rem;
+		height: 0.1rem;
 		background: #0087ed;
 		content: "";
 		opacity: 0;
@@ -1209,7 +1209,7 @@ img.size-full {}
 			}
 
 			.entry-byline a:not(.button)::after {
-				background: #b2b2b2;
+				background-color: #b2b2b2;
 				height: 0.03em;
 			}
 			.entry-byline a:hover {}
