Added word-wrap to links to avoid horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -852,7 +852,8 @@ img.size-full {}
 		}
 
 	#main a {
-	position: relative;
+	   position: relative;
+     word-wrap: break-word;
 	}
 
 	#main a:not(.button)::after {
