--- a/style.css
+++ b/style.css
@@ -911,6 +911,7 @@ img.size-full {}
   .page-template-empty .entry-content {
     width: 100%;
     padding: 0;
+    margin: 0;
   }
 
   .page-template-empty .entry-header,
