--- a/style.css
+++ b/style.css
@@ -910,6 +910,7 @@ img.size-full {}
   .page-template-empty .entry,
   .page-template-empty .entry-content {
     width: 100%;
+    max-width: 100%;
     padding: 0;
     margin: 0;
   }
