--- a/style.css
+++ b/style.css
@@ -1759,7 +1759,7 @@ img.size-full {}
 		position: absolute;
 		display: none;
 		margin-top: 4px;
-		padding: 0px;
+		padding: 16px 0;
 		background: #393f3f;
 		border-radius: 5px;
 		box-shadow: 0 0 4px rgba(0,0,0,0.5);
@@ -1774,7 +1774,7 @@ img.size-full {}
 		content: '';
 		position: absolute;
 		top: -12px;
-		right: 9%;
+		right: 12%;
 		border-width: 13px 16px;
 		border-style: solid;
 		border-top: 0;
@@ -1795,7 +1795,7 @@ img.size-full {}
 
 	#menu-primary li a,
 	#menu-secondary li a {
-		padding: 8px 16px;
+		padding: 12px 16px;
 		color: #ffffff;
 		border-radius: 0px;
 	}
